[gd_scene load_steps=10 format=3 uid="uid://ttktdtpbnchc"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_rsweg"]
[ext_resource type="PackedScene" uid="uid://cklpfdtmpab32" path="res://Scenes/flappy.tscn" id="2_5wkhq"]
[ext_resource type="PackedScene" uid="uid://bly6vkba8tnef" path="res://Scenes/pipe_spawner.tscn" id="3_u1ukw"]
[ext_resource type="PackedScene" uid="uid://dfhdsiqsfgyqu" path="res://Scenes/floor_spawner.tscn" id="4_mnwd6"]
[ext_resource type="PackedScene" uid="uid://c0cdpqg0m21md" path="res://Scenes/floor.tscn" id="5_d843c"]
[ext_resource type="FontVariation" uid="uid://c04p6ioq50msf" path="res://Fonts/Flappy_bird.tres" id="6_hjntr"]
[ext_resource type="Texture2D" uid="uid://csyeglc5f0nlh" path="res://Art/Background.jpg" id="6_m1ch0"]
[ext_resource type="PackedScene" uid="uid://cedfvx8w0lanj" path="res://Scenes/enemy_spawner.tscn" id="8_sal6j"]
[ext_resource type="PackedScene" uid="uid://c5en8xphwl533" path="res://Scenes/score_ui.tscn" id="9_8y8sn"]

[node name="World" type="Node2D"]
script = ExtResource("1_rsweg")

[node name="Flappy" parent="." instance=ExtResource("2_5wkhq")]
position = Vector2(1, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PipeSpawner" parent="." instance=ExtResource("3_u1ukw")]
position = Vector2(617, 1)

[node name="FloorSpawner" parent="." instance=ExtResource("4_mnwd6")]
position = Vector2(632, 345)

[node name="floor" parent="." instance=ExtResource("5_d843c")]
position = Vector2(-442, 345)

[node name="floor2" parent="." instance=ExtResource("5_d843c")]
position = Vector2(-27, 345)

[node name="floor3" parent="." instance=ExtResource("5_d843c")]
position = Vector2(386, 345)

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(1.50003, -43.5)
scale = Vector2(0.792047, 0.939883)
texture = ExtResource("6_m1ch0")

[node name="Title" type="Label" parent="."]
offset_left = -584.0
offset_top = -353.0
offset_right = 818.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("6_hjntr")
theme_override_font_sizes/font_size = 300
text = "Flappy Bird"

[node name="subtitle" type="Label" parent="Title"]
layout_mode = 0
offset_left = -4.0
offset_top = 487.0
offset_right = 983.0
offset_bottom = 668.0
theme_override_fonts/font = ExtResource("6_hjntr")
theme_override_font_sizes/font_size = 250
text = "But With A Gun"

[node name="start" type="Label" parent="Title"]
layout_mode = 0
offset_left = 456.0
offset_top = 283.0
offset_right = 702.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("6_hjntr")
theme_override_font_sizes/font_size = 50
text = "Left Click to start"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="enemy_spawner" parent="." instance=ExtResource("8_sal6j")]
position = Vector2(673, -1)

[node name="Title_Timeout" type="Timer" parent="."]
wait_time = 8.0

[node name="Score_UI" parent="." instance=ExtResource("9_8y8sn")]
offset_left = -593.0
offset_top = -353.0
offset_right = -593.0
offset_bottom = -353.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Title_Timeout" to="." method="_on_title_timeout_timeout"]
